update variables, add flex-wrap for responsiveness, add fixed position to header, adjust sizes

--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -6,6 +6,7 @@
   background-color: $primary;
   text-align: center;
   padding: 2.5rem 0;
+  padding-top: 10.5rem;
 
   &__info {
     display: inline-block;
@@ -18,6 +19,9 @@
     vertical-align: middle;
     display: inline-block;
     text-align: end;
+  }
+  &__image {
+    height: 21.875rem;
   }
 }
 .button {
@@ -58,6 +62,7 @@
     display: flex;
     justify-content: center;
     gap: 3rem;
+    flex-wrap: wrap;
   }
   &__button-container {
     display: flex;
@@ -67,16 +72,17 @@
 }
 
 .product {
-  width: 20.625rem;
+  width: 18rem;
   height: 27.5rem;
   border-radius: 10px;
   box-shadow: 0 5px 9px -1px rgba(0, 0, 0, 0.25);
   background-color: $neutral-white;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   &__image-container {
     @include flex-center;
-    height: 65%;
+    flex-grow: 1;
   }
   &__image {
     height: $image-height;
@@ -85,11 +91,11 @@
   &__bottom {
     background-color: $primary;
     width: 100%;
-    padding: 1rem;
+    padding: 0 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 35%;
+    height: 9rem;
   }
   &__name {
     margin: 0;
@@ -100,7 +106,7 @@
   }
   &__price {
     color: #5bacc3;
-    font-size: 2.0625rem;
+    font-size: 1.85rem;
     font-weight: 800;
   }
 }
@@ -175,7 +181,7 @@
 
   &__info {
     background-color: $neutral-dark;
-    padding: 2.5rem 0;
+    padding: 2.5rem;
     color: $neutral-white;
     font-size: 2.8125rem;
     text-align: center;
@@ -190,6 +196,8 @@
   padding: 5rem 10rem;
   display: flex;
   justify-content: space-between;
+  gap: 2rem;
+  flex-wrap: wrap;
   position: relative;
   overflow: hidden;
 
