--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -8,72 +8,77 @@
   background-position: center;
   height: 43.75rem;
   @include flex-center;
+
+  &__title-box {
+    background-color: #393939;
+    height: 12.5rem;
+    width: 18.75rem;
+    @include flex-center;
+  }
+  &__title-frame {
+    height: 12.5rem;
+    width: 18.75rem;
+    border: 5px solid #5bacc3;
+    @include flex-center;
+    position: relative;
+    top: -0.625rem;
+    left: -0.625rem;
+  }
+  &__title {
+    color: #fff;
+    margin: 0;
+  }
 }
-.hero__title-box {
-  background-color: #393939;
-  height: 12.5rem;
-  width: 18.75rem;
-  @include flex-center;
-}
-.hero__title-frame {
-  height: 12.5rem;
-  width: 18.75rem;
-  border: 5px solid #5bacc3;
-  @include flex-center;
-  position: relative;
-  top: -0.625rem;
-  left: -0.625rem;
-}
-.hero__title {
-  color: #fff;
-  margin: 0;
-}
+
 .page-nav {
   background-color: #393939;
   color: #fff;
   text-align: center;
   text-transform: uppercase;
+
+  &__list {
+    padding: 1rem 0;
+  }
+  &__link {
+    text-decoration: none;
+  }
+  &__item {
+    display: inline-block;
+    padding: 0 1rem;
+    border-left: 4px solid #5bacc3;
+  }
 }
-.page-nav__list {
-  padding: 1rem 0;
-}
-.page-nav__link {
-  text-decoration: none;
-}
-.page-nav__item {
-  display: inline-block;
-  padding: 0 1rem;
-  border-left: 4px solid #5bacc3;
-}
+
 .product-type {
   background-color: #fff0ed;
   padding: 1rem 0;
+
+  &__container {
+    padding-bottom: 1.25rem;
+  }
+  &__product {
+    margin-bottom: 1.25rem;
+  }
+  &__title {
+    margin-bottom: 2rem;
+  }
+  &__description {
+    text-align: center;
+    width: 25rem;
+    margin: 0 auto;
+    font-style: italic;
+  }
+  &__price {
+    display: block;
+    text-align: center;
+    color: #5bacc3;
+    margin-top: 0.5rem;
+  }
+  &--gray {
+    background-color: #f7f7f7;
+  }
 }
 .product-type__title,
 .product-type__product {
   text-align: center;
-}
-.product-type__container {
-  padding-bottom: 1.25rem;
-}
-.product-type__product {
-  margin-bottom: 1.25rem;
-}
-.product-type__title {
-  margin-bottom: 2rem;
-}
-.product-type__description {
-  text-align: center;
-  width: 25rem;
-  margin: 0 auto;
-  font-style: italic;
-}
-.product-type__price {
-  display: block;
-  text-align: center;
-  color: #5bacc3;
-  margin-top: 0.5rem;
-}
-.product-type.product-type--gray {
-  background-color: #f7f7f7;
 }
