--- a/scss/partials/_global.scss
+++ b/scss/partials/_global.scss
@@ -1,5 +1,7 @@
 @use "./variables.scss" as *;
 
+// Resets
+
 *,
 *::before,
 *::after {
@@ -10,12 +12,54 @@ body {
   font-weight: 400;
   margin: 0;
 }
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  margin-bottom: 2.5rem;
+}
+h1,
+h2 {
+  font-size: $h1-h2-font-size;
+  font-weight: $light;
+}
+h3 {
+  font-size: $h3-font-size;
+  font-weight: $light;
+}
+p {
+  font-size: $p-font-size;
+  margin: 0;
+}
+a {
+  $button-font-size: 1.3125rem;
+}
+
+// Header
+
 .header {
   background-color: $primary;
-  padding: 1.25rem;
+  padding: 0 1.25rem;
+  height: 6rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  width: 100%;
+  z-index: 4;
 }
 .header__home {
   display: flex;
@@ -39,39 +83,4 @@ body {
 }
 .header__logo {
   width: 3.125rem;
-}
-ul,
-li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-a {
-  color: inherit;
-  text-decoration: none;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-  margin-bottom: 2.5rem;
-}
-h1,
-h2 {
-  font-size: 3.75rem;
-  font-weight: 300;
-}
-h3 {
-  font-size: 2.0625rem;
-  font-weight: 300;
-}
-p {
-  font-size: 1.125rem;
-  margin: 0;
-}
-a {
-  font-size: 1.3125rem;
 }
