--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -8,27 +8,24 @@ $neutral-medium: #909090;
 $neutral-light: #f7f7f7;
 $neutral-white: #fff;
 
-// Font sizes and weights
+// Font sizes
 
-$h1-h2-font-size: 3.75rem;
-$h1-h2-font-weight: 300;
-
-$h3-font-size: 2.0625rem;
-$h3-font-weight: 400;
-
-$button-font-size: 1.3125rem;
-$button-font-weight: 400;
-
-$p-font-size: 1.125rem;
-$p-font-weight: 400;
-
+$h1-h2-font-size: 3rem;
+$h3-font-size: 1.5rem;
+$button-font-size: 1.25rem;
+$p-font-size: 1.1rem;
 $discount-font-size: 2.8125rem;
-$discount-font-weight: 700;
+
+// Font weights
+
+$light: 300;
+$regular: 400;
+$bold: 700;
 
 // Images
 
 $icon-width: 3.125rem;
-$image-height: 17.5rem;
+$image-height: 17rem;
 
 // Borders
 
